[package]
name = "day04"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2018"

[dependencies]
aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
color-eyre = "0.5.11"
counter = "0.5.2"
lazy_static = "1.4.0"
parse-display = "0.5.0"
regex = "1.5.4"
structopt = "0.3.21"
thiserror = "1.0.24"
