[package]
name = "day09"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]

[lib]
name = "day09lib"
path = "src/lib.rs"

[[bin]]
name = "day09bin"
path = "src/main.rs"

[dependencies]
util = { path = "../util" }
num-bigint = "0.1.35"
num-traits = "0.1.36"
