[package]
name = "day09"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2018"

[dependencies]
num-bigint = "0.4.0"
num-traits = "0.2.14"

[features]
# no features by default
default = []

# debug-output depends on nothing else
debug_output = []
