[package]
name = "day09"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2018"

[dependencies]
aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
color-eyre = "0.5.11"
num-bigint = "0.4.0"
num-traits = "0.2.14"
structopt = "0.3.21"
thiserror = "1.0.24"
