[package]
name = "day10"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
build = "build.rs" # LALRPOP preprocessing

[lib]
name = "day10lib"
path = "src/lib.rs"

[[bin]]
name = "day10bin"
path = "src/main.rs"

[dependencies]
util = { path = "../util" }

# Add a dependency on the LALRPOP runtime library:
[dependencies.lalrpop-util]
version = "0.12.4"

[build-dependencies.lalrpop]
version = "0.12.4"
