[package]
name = "day10"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
build = "build.rs" # LALRPOP preprocessing

[lib]
name = "day10lib"
path = "src/lib.rs"

[[bin]]
name = "day10bin"
path = "src/main.rs"

[dependencies]
util = { path = "../util" }
lalrpop-util = "0.19.5"

[build-dependencies]
lalrpop = "0.19.5"
